@startuml
class Player{
Long id
String userName
String password
String email
String avatar
LocalDateTime lastLoginDate
}
class Game{
Long id
String code
String name
String description
String rules
}
class Match{
Long id
Game game
Player player
LocalDateTime createdDate
MatchStatus status
}
enum MatchStatus{
STARTED
FINISHED
CANCELED
}
MatchStatus--*Match
Game --*Match
Player--*Match
@enduml